✨ feat: add extend api
- Added extend API
- Added documentation for extend API
